{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 21,
  "lineage": "fe69def9-2103-7eb4-6e85-030ae0e97974",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "VM1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089c6f2e3866f0f14",
            "arn": "arn:aws:ec2:us-east-2:697084372859:instance/i-0638464ec93e58ebe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0638464ec93e58ebe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08785882ac8aa018b"
              }
            ],
            "primary_network_interface_id": "eni-08785882ac8aa018b",
            "private_dns": "ip-172-16-0-145.us-east-2.compute.internal",
            "private_ip": "172.16.0.145",
            "public_ip": "18.219.27.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af7eb8e023b2e130",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025e8df3ddd8f219a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a892c712dfa31b55"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_lb"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "VM2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089c6f2e3866f0f14",
            "arn": "arn:aws:ec2:us-east-2:697084372859:instance/i-0dcd7666502e7dbdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcd7666502e7dbdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b3c835401ace177d"
              }
            ],
            "primary_network_interface_id": "eni-0b3c835401ace177d",
            "private_dns": "ip-172-16-1-146.us-east-2.compute.internal",
            "private_ip": "172.16.1.146",
            "public_ip": "18.217.93.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007747bccc61defc1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975a85bcc99eac38",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a892c712dfa31b55"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_lb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:internet-gateway/igw-0315e11860639e8de",
            "id": "igw-0315e11860639e8de",
            "owner_id": "697084372859",
            "vpc_id": "vpc-030670cd88aa62f9f"
          },
          "dependencies": [
            "aws_vpc.vpc_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "VM1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:network-interface/eni-08785882ac8aa018b",
            "id": "eni-08785882ac8aa018b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:54:94:28:fb:24",
            "owner_id": "697084372859",
            "private_ip": "172.16.0.145",
            "private_ip_list": [
              "172.16.0.145"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.0.145"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a892c712dfa31b55"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025e8df3ddd8f219a"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.subnet_lb",
            "aws_vpc.vpc_lb"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "VM2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:network-interface/eni-0b3c835401ace177d",
            "id": "eni-0b3c835401ace177d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:c1:ff:aa:27:7c",
            "owner_id": "697084372859",
            "private_ip": "172.16.1.146",
            "private_ip_list": [
              "172.16.1.146"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.1.146"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a892c712dfa31b55"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975a85bcc99eac38"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.subnet_lb",
            "aws_vpc.vpc_lb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:route-table/rtb-0ca1ded04316a872a",
            "id": "rtb-0ca1ded04316a872a",
            "owner_id": "697084372859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0315e11860639e8de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030670cd88aa62f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_lb",
            "aws_vpc.vpc_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "172.16.0.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aca675a375292e3",
            "route_table_id": "rtb-0ca1ded04316a872a",
            "subnet_id": "subnet-025e8df3ddd8f219a"
          },
          "dependencies": [
            "aws_internet_gateway.gw_lb",
            "aws_route_table.route_table_lb",
            "aws_subnet.subnet_lb",
            "aws_vpc.vpc_lb"
          ]
        },
        {
          "index_key": "172.16.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f12d9aa86b59c27",
            "route_table_id": "rtb-0ca1ded04316a872a",
            "subnet_id": "subnet-0975a85bcc99eac38"
          },
          "dependencies": [
            "aws_internet_gateway.gw_lb",
            "aws_route_table.route_table_lb",
            "aws_subnet.subnet_lb",
            "aws_vpc.vpc_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:security-group/sg-0a892c712dfa31b55",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a892c712dfa31b55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "697084372859",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-030670cd88aa62f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_lb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "172.16.0.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:subnet/subnet-025e8df3ddd8f219a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025e8df3ddd8f219a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697084372859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-030670cd88aa62f9f"
          },
          "dependencies": [
            "aws_vpc.vpc_lb"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "172.16.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:subnet/subnet-0975a85bcc99eac38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0975a85bcc99eac38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697084372859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-030670cd88aa62f9f"
          },
          "dependencies": [
            "aws_vpc.vpc_lb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:697084372859:vpc/vpc-030670cd88aa62f9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0dfc3045b0455a19d",
            "default_route_table_id": "rtb-064c3b949d18dd6fb",
            "default_security_group_id": "sg-00e1a9f5cde7acbc8",
            "dhcp_options_id": "dopt-0902fe40e6cdb493d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-030670cd88aa62f9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064c3b949d18dd6fb",
            "owner_id": "697084372859"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:697084372859:loadbalancer/app/my-alb/af9d2b1226c8004f",
            "arn_suffix": "app/my-alb/af9d2b1226c8004f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1131161729.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:697084372859:loadbalancer/app/my-alb/af9d2b1226c8004f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-0a892c712dfa31b55"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025e8df3ddd8f219a"
              },
              {
                "subnet_id": "subnet-0975a85bcc99eac38"
              }
            ],
            "subnets": [
              "subnet-025e8df3ddd8f219a",
              "subnet-0975a85bcc99eac38"
            ],
            "tags": {
              "Name": "my-alb"
            },
            "tags_all": {
              "Name": "my-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-030670cd88aa62f9f",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.subnet_lb",
            "aws_vpc.vpc_lb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:697084372859:listener/app/my-alb/af9d2b1226c8004f/2c928f840f1e34a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:697084372859:targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:697084372859:listener/app/my-alb/af9d2b1226c8004f/2c928f840f1e34a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:697084372859:loadbalancer/app/my-alb/af9d2b1226c8004f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.ec2_lb",
            "aws_network_interface.nic_lb",
            "aws_vpc.vpc_lb",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:697084372859:targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9",
            "arn_suffix": "targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:697084372859:targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20220517230307614800000001",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pref-"
            },
            "tags_all": {
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-030670cd88aa62f9f"
          },
          "dependencies": [
            "aws_instance.ec2_lb",
            "aws_network_interface.nic_lb",
            "aws_vpc.vpc_lb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:697084372859:targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9-20220517230310188100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:697084372859:targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9",
            "target_id": "i-0638464ec93e58ebe"
          },
          "dependencies": [
            "aws_instance.ec2_lb",
            "aws_network_interface.nic_lb",
            "aws_vpc.vpc_lb",
            "module.alb.aws_lb_target_group.main"
          ]
        },
        {
          "index_key": "0.1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:697084372859:targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9-20220517230310468500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:697084372859:targetgroup/pref-20220517230307614800000001/3e06cf90ee7525b9",
            "target_id": "i-0dcd7666502e7dbdb"
          },
          "dependencies": [
            "aws_instance.ec2_lb",
            "aws_network_interface.nic_lb",
            "aws_vpc.vpc_lb",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    }
  ]
}